Preloads messages and drops :D

--- a/Resources.resx
+++ b/Resources.resx
@@ -166,4 +166,10 @@
   <data name="FayeDropsChannel" xml:space="preserve">
     <value>/clouds/{cloudid}/drops</value>
   </data>
+  <data name="JoinCloudEndpoint" xml:space="preserve">
+    <value>http://www.cloudsdale.org/v1/clouds/{cloudid}/users</value>
+  </data>
+  <data name="LeaveCloudEndpoint" xml:space="preserve">
+    <value>http://www.cloudsdale.org/v1/clouds/{cloudid}/users/{userid}</value>
+  </data>
 </root>
