--- a/Resources.resx
+++ b/Resources.resx
@@ -184,4 +184,8 @@
   <data name="CurrentApiVersion" xml:space="preserve">
     <value>1.0.0</value>
   </data>
+  <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="BasicProfanityFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>settings\basicprofanityfilter.txt;System.String, mscorlib, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e;utf-8</value>
+  </data>
 </root>
