--- a/Resources.resx
+++ b/Resources.resx
@@ -188,4 +188,7 @@
   <data name="BasicProfanityFilter" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>settings\basicprofanityfilter.txt;System.String, mscorlib, Version=2.0.5.0, Culture=neutral, PublicKeyToken=7cec85d7bea7798e;utf-8</value>
   </data>
+  <data name="FayePresence" xml:space="preserve">
+    <value>[{"channel":"/clouds/{cloudid}/presence","clientId":"{clientid}",data:{user}}]</value>
+  </data>
 </root>
