--- a/FayeConnector/FayeResources.resx
+++ b/FayeConnector/FayeResources.resx
@@ -118,18 +118,18 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Connect" xml:space="preserve">
-    <value>[{"channel":"/meta/connect","clientId":"%CLIENTID%","connectionType":"websocket"}]</value>
+    <value>[{"channel":"/meta/connect","clientId":"%CLIENTID%","connectionType":"websocket","ext":{"auth_token":":auth"}}]</value>
   </data>
   <data name="Disconnect" xml:space="preserve">
     <value>[{"channel":"/meta/disconnect","clientId":"%CLIENTID%"}]</value>
   </data>
   <data name="Handshake" xml:space="preserve">
-    <value>[{"channel":"/meta/handshake","version":"1.0","supportedConnectionTypes":["websocket"]}]</value>
+    <value>[{"channel":"/meta/handshake","version":"1.0","supportedConnectionTypes":["websocket"],"ext":{"auth_token":":auth"}}]</value>
   </data>
   <data name="Subscribe" xml:space="preserve">
-    <value>[{"channel":"/meta/subscribe","clientId":"%CLIENTID%","subscription":"%CHANNEL%"}]</value>
+    <value>[{"channel":"/meta/subscribe","clientId":"%CLIENTID%","subscription":"%CHANNEL%","ext":{"auth_token":":auth"}}]</value>
   </data>
   <data name="Unsubscribe" xml:space="preserve">
-    <value>[{"channel":"/meta/unsubscribe","clientId":"%CLIENTID%","subscription":"%CHANNEL%"}]</value>
+    <value>[{"channel":"/meta/unsubscribe","clientId":"%CLIENTID%","subscription":"%CHANNEL%","ext":{"auth_token":":auth"}}]</value>
   </data>
 </root>
